<resources>
    <string name="app_name">E Commerce Project</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_emailID">Enter Email ID</string>
    <string name="application_logo">Application Logo</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobile_number">Enter Mobile Number</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign UP</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="explore">Explore</string>
    <string name="cart">Cart</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="app_logo">App Logo</string>
    <string name="location">Location</string>
    <string name="work">WORK</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="my_profile">My Profile</string>
    <string name="enter_contact_number">Enter Contact Number</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_business_name">Enter Business Name</string>
    <string name="first_name">First Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="email">Email</string>
    <string name="business_name">Business Name</string>
    <string name="logout">Logout</string>
    <string name="enter_current_address">Enter Current Address</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="enter_street_name">Enter Street Name</string>
    <string name="enter_city_village_name">Enter City/Village Name</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="enter_house_number">Enter House Number</string>
    <string name="update_address">Update Address</string>
    <string name="new_address">New Address</string>
</resources>