<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".ui.SignInFragment"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <EditText
            android:id="@+id/enter_mobileNumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/mobile_number"
            android:importantForAutofill="no"
            android:inputType="phone"
            tools:ignore="TextContrastCheck"
            />

        <EditText
            android:id="@+id/enter_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/enter_mobileNumber"
            android:gravity="clip_vertical"
            android:hint="@string/enter_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:ignore="TextContrastCheck"
            />

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@id/enter_password"
            android:layout_alignParentStart="true"
            android:text="@string/remember_me"
            />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/enter_password"
            android:layout_alignBottom="@id/checkbox"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="#FA220C"
            tools:ignore="TextContrastCheck"
            />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox"
            android:layout_centerHorizontal="true"
            android:enabled="false"
            android:text="@string/login"
            />
    </RelativeLayout>

</FrameLayout>